--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <groupId>qa</groupId>
     <artifactId>veeamTestProject</artifactId>
+    <version>1.0.-SNAPSHOT</version>
 
 <dependencies>
     <dependency>
@@ -38,6 +41,12 @@
         <scope>test</scope>
     </dependency>
 
-</dependencies>
+    <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-dependency-plugin -->
+    <dependency>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-dependency-plugin</artifactId>
+        <version>3.1.1</version>
+    </dependency>
 
+</dependencies>
 </project>
